--- a/public/crx/vera/style/invite.less
+++ b/public/crx/vera/style/invite.less
@@ -31,9 +31,7 @@
       max-height: 90px;
       overflow: hidden;
     }
-    // .btn {
-    //   .btn();
-    // }
+    @import (multiple) 'common/btn.less';
   }
   .users {
     height: fit-content;
@@ -73,9 +71,7 @@
         color: inherit;
         font-size: 10px;
       }
-      // .btn {
-      //   .btn();
-      // }
+      @import (multiple) 'common/btn.less';
     }
   }
   .login {
