--- a/public/crx/vera/style/join.css
+++ b/public/crx/vera/style/join.css
@@ -12,7 +12,17 @@
   border-radius: var(--border-radius);
 }
 .join .btn {
-  font-size: 22px;
+  border: none;
+  white-space: nowrap;
+  background-color: var(--camera-bg-color);
+  color: var(--font-color);
+  border-radius: var(--border-radius);
+  padding: 4px 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in;
+}
+.join .btn:active {
+  transform: scale(0.9);
 }
 .join .login {
   margin-top: 15px;
