--- a/public/crx/vera/style/join.less
+++ b/public/crx/vera/style/join.less
@@ -10,10 +10,7 @@
   padding: 5px;
   background: transparent;
   border-radius: var(--border-radius);
-  .btn {
-    // .btn();
-    font-size: 22px;
-  }
+  @import (multiple) 'common/btn.less';
   .login {
     margin-top: 15px;
     padding: 10px 20px;
