--- a/public/crx/vera/style/theme.css
+++ b/public/crx/vera/style/theme.css
@@ -1,5 +1,5 @@
 :root {
-  --widget-bg-color: #000;
+  --vera-widget-bg-color: #000;
   --panel-bg-color: #323639;
   --camera-bg-color: #5f6368;
   --button-bg-color: #000;
