--- a/public/crx/vera/style/widget.less
+++ b/public/crx/vera/style/widget.less
@@ -24,7 +24,7 @@
       margin-left: -25px;
       width: 50px;
       height: 50px;
-      background-color: var(--widget-bg-color);
+      background-color: var(--vera-widget-bg-color);
       border-top-right-radius: 50%;
       border-bottom-right-radius: 50%;
       padding: 0;
